# fupload

./: .gitignore  main.py  pyproject.toml
static/: index.html
